# rs-vote

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
experiments/: compare_2d_cv.py  compare_wnominate.py
experiments/camara/: adin_results.txt  camara_results.txt  extract_camara.py  optuna_camara.py  tune_camara.py
experiments/sen90/: extract_sen90.py  optuna_sen90.py  sen90_results.txt  tune_sen.py
experiments/toy/check_2d_recovery/: check_2d_recovery.py  results.txt
experiments/toy/check_wnominate_parity/: check_wnominate_parity.py  results.txt
experiments/toy/compare_2d_cv/: compare_2d_cv.py  results.txt
experiments/toy/compare_wnominate/: compare_wnominate.py  results.txt
experiments/toy/optuna_fmcov/: optuna_fmcov.py  optuna_results.txt
experiments/toy/tune_fmcov/: optuna_results.txt  tune_fmcov.py
rsvote/src/rsvote/data/: __init__.py  matrix.py
rsvote/src/rsvote/models/: __init__.py  alternating.py  base.py  recsys.py  wnominate.py
rsvote/tests/: test_alternating.py  test_basic.py  test_parity_r.py  test_validation.py
src/rsvote/: __init__.py
src/rsvote/data/: __init__.py  matrix.py
src/rsvote/models/: __init__.py  alternating.py  base.py  fmcov.py  recsys.py  wnominate.py
