[project]
name = "rs-vote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "rpy2>=3.6.4",
]

[tool.setuptools.packages.find]
where = ["rsvote/src"]

[tool.ty]
python-version = "3.14"
rules.all = "warn"
type-checking-mode = "strict"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
# Simplified: You can use "ALL" and then ignore what you don't like
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "RET", "SIM", "TCH"]
ignore = ["D100", "D104"] # Example: Ignore missing docstrings in __init__

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
